# hr

./: .gitignore  AGENTS.md  Lazuli_CS_JD.md  README.md  candidates.jsonl  pyproject.toml
jobs/: condition1.json
src/hrscreening/: __init__.py  cli.py  container.py  llm.py  logging.py  markdown_to_jsonl.py  pdf_utils.py  pipeline.py
src/hrscreening/adapters/: __init__.py  bizreach.py
src/hrscreening/config/: __init__.py
src/hrscreening/core/: __init__.py  screening.py
src/hrscreening/core/evaluators/: __init__.py  bm25_proximity.py  embedding_similarity.py  jd_matcher.py  salary.py  tenure.py
src/hrscreening/schemas/: __init__.py  candidate.py  config.py  job.py
tests/core/: test_bm25_evaluator.py  test_candidate_loader_validation.py  test_container_config.py  test_embedding_evaluator.py  test_evaluator_overrides.py  test_jd_matcher.py  test_salary_evaluator.py  test_screening_core.py  test_tenure_evaluator.py
tests/integration/: test_cli_pipeline.py  test_pipeline_audit_llm.py
tests/markdown/: test_markdown_to_jsonl.py
tests/pdf_utils/: test_extract_markdown.py
tests/schemas/: test_candidate_profile.py
